--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Boris Shminke
-email: boris.shminke@univ-cotedazur.fr
+email: boris@shminke.ml
 description: Boris Shminke, Université Côte d'Azur, CNRS, LJAD, France
 baseurl: ""
 url: "https://boris.shminke.ml"
