--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Boris Shminke
-email: boris@shminke.ml
+email: boris@shminke.com
 description: Boris Shminke, Université Côte d'Azur, CNRS, LJAD, France
 baseurl: ""
-url: "https://boris.shminke.ml"
+url: "https://boris.shminke.com"
 linkedin_username: inpefess
 github_username:  inpefess
 theme: minima
