--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Boris Shminke
 email: boris@shminke.com
-description: Boris Shminke, Machine Learning and Data consultant, France
+description: Boris Shminke, Machine Learning Engineer, France
 baseurl: ""
 url: "https://boris.shminke.com"
 linkedin_username: inpefess
